# ai-agents

./: .gitignore  README.md
crewai_basic/: README.md  app.py  output_d2cacce2-7bc7-4f76-89ee-0b3e44fc7478.json  pyproject.toml
crewai_basic/crew_agent/: job_screener_crew.py  output_models.py
crewai_basic/crew_agent/config/: agents.yaml  tasks.yaml
crewai_basic/input/: resume.txt
crewai_company_research/: .env.sample  .gitignore  README.md  app.py  pyproject.toml
crewai_company_research/crew_agent/: company_research_crew.py  output_models.py
crewai_company_research/crew_agent/config/: agents.yaml  tasks.yaml
crewai_company_research/output/: hubspot_hubspot.com_report.md
crewai_with_tools/: .env.sample  .gitignore  README.md  app.py  pyproject.toml
crewai_with_tools/crew_agent/: composio_crew.py  output_models.py  storage_manager.py
crewai_with_tools/crew_agent/config/: agents.yaml  tasks.yaml
