[project]
name = "ai-agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentops>=0.4.21",
    "composio-core==0.7.19",
    "composio-crewai==0.7.19",
    "crewai[anthropic,google-genai]>=1.6.0",
    "litellm>=1.80.5",
    "pydantic>=2.12.4",
]
